--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "css-loader": "^6.7.1",
+    "firebase": "^9.6.10",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "recoil": "^0.7.0",
+    "sass": "^1.49.11",
+    "sass-loader": "^12.6.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.43",
