--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "css-loader": "^6.7.1",
     "dayjs": "^1.11.0",
     "firebase": "^9.6.10",
+    "firebase-admin": "^10.0.2",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
